# flyflor-cli

./: .gitignore  .workmux.yaml  AGENTS.md  Cargo.toml  DEVELOPMENT_NOTES.md  LOGS.md  README.md  README.zh.cn.md  TODO.md  mock-data.json  package-lock.json  package.json  session-table.md  todo.md  tsconfig.json
docs/: README.md  README.zh.cn.md  architecture.md  architecture.zh.cn.md  development.md  development.zh.cn.md  gateway-channel-closure-audit.md  protocol.md  protocol.zh.cn.md  tui-model.md  tui-model.zh.cn.md
i18n/: en-US.json  zh-CN.json
scripts/: bluebubbles-gateway-smoke.ts  build-binary.cjs  codex-lanes.sh  dev.ts  dingtalk-gateway-smoke.ts  discord-gateway-smoke.ts  email-gateway-smoke.ts  feishu-gateway-smoke.ts  google-chat-gateway-smoke.ts  homeassistant-gateway-smoke.ts  install-binary.cjs  irc-gateway-smoke.ts  line-gateway-smoke.ts  live-tui-scenario.ts  logs.ts  matrix-gateway-smoke.ts  mattermost-gateway-smoke.ts  msgraph-webhook-gateway-smoke.ts  ntfy-gateway-smoke.ts  openwebui-gateway-smoke.ts  qqbot-gateway-smoke.ts  signal-gateway-smoke.ts  simplex-gateway-smoke.ts  slack-gateway-smoke.ts  smoke-npm-local.cjs  sms-gateway-smoke.ts  teams-gateway-smoke.ts  telegram-gateway-smoke.ts  webhook-gateway-smoke.ts  wecom-callback-gateway-smoke.ts  wecom-gateway-smoke.ts  weixin-gateway-smoke.ts  whatsapp-gateway-smoke.ts  yuanbao-gateway-smoke.ts
src/: app.rs  cli.rs  cli_shell.rs  fenwick.ts  gateway_config.rs  gateway_core.rs  gateway_runtime.rs  input.rs  main.rs  main.ts  markdown.ts  mock-data.ts  protocol.rs  runtime.rs  shared.rs  (+6 more)
(+139 files in other folders)
