[package]
name = "flyflor-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flyflor"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
crossterm = "0.29"
ratatui = "0.30"
ratatui-interact = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["formatting"] }
tungstenite = "0.29.0"
unicode-width = "0.2"
